<resources>
    <string name="app_name">Piggify.me</string>
    <string name="action_reset">Reset data</string>
    <string name="income_text">Income: %1$d</string>
    <string name="expense_text">Expense: %1$d</string>
    <string name="balance_text">Balance: %1$d</string>
    <string name="source_hint">Source</string>
    <string name="amount_hint">Amount</string>
    <string name="menu_overview">Summary</string>
    <string name="menu_details_income">Incomes</string>
    <string name="menu_details_expense">Expenses</string>
    <string name="text_incomes">List of your incomes</string>
    <string name="text_expenses">List of your expenses</string>
    <string name="detailNameText">%1$s</string>
    <string name="detailValueText">%1$d</string>
</resources>
